CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MT)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -O -g -std=c++17 -pthread")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

ADD_DEFINITIONS(-DLOCAL_LOG_DIR=\"${PROJECT_SOURCE_DIR}/Log/\")

INCLUDE_DIRECTORIES(.)

ADD_EXECUTABLE(main main.cpp log.cpp)